Description: LASSERT_{REQ,REP}SWAB macros are buggy
Details    : If SWAB_PARANOIA is disabled, the LASSERT_REQSWAB and
             LASSERT_REPSWAB macros become no-ops, which is incorrect. Drop
	     these macros and replace them with their difinitions instead.

Severity   : normal
Bugzilla   : 13556
Description: conf-sanity.sh test_33 failed with 1
Details    : change mgsnode 

--------------------------------------------------------------------------------

2007-10-26         Cluster File Systems, Inc. <info@clusterfs.com>
       * version 1.6.4
       * Support for kernels:
        2.6.5-7.286 (SLES 9),
        2.6.9-55.0.9.EL (RHEL 4),
        2.6.16.53-0.8 (SLES 10),
        2.6.18-8.1.14.el5 (RHEL 5),
        2.6.18.8 vanilla (kernel.org)
       * Client support for unpatched kernels:
        (see http://wiki.lustre.org/index.php?title=Patchless_Client)
        2.6.16 - 2.6.22 vanilla (kernel.org)
       * Due to recently discovered recovery problems, we do not recommend
        using patchless RHEL 4 clients with this or any earlier release.
       * Recommended e2fsprogs version: 1.40.2-cfs1
       * Note that reiserfs quotas are disabled on SLES 10 in this kernel.

Severity   : normal
Bugzilla   : 13730
Description: Not fail import if we got -EAGAIN
Details    : if osc_interpret_create got -EAGAIN his immediately exit and 
             wakeup oscc_waitq. After wakeup oscc_wait_for_objects call 
	     oscc_has_objects and see osc has no objests and call 
             oscc_internal_create for resend create request.

Severity   : normal
Bugzilla   : 13521
Description: Update kernel patches for SLES10 2.6.16.53-0.8.
Details    : Update which_patch & target file for SLES10 latest kernel.

Severity   : enhancement
Bugzilla   : 13128
Description: add --type and --size parameters to lfs find
Details    : Enhance lfs find by adding filetype and filesize parameters. Also
	     multiple OBDs can now be specified for the --obd option.

Severity   : enhancement